mejora de aspecto visual de la web

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Tienda - Plantilla E-commerce</title>
+        <title>STOCKX - Plantilla E-commerce</title>
         <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
         <header class="header" role="banner">
             <div class="header__top">
-                <a class="header__brand" href="#">MiTienda</a>
+                <a class="header__brand" href="#">STOCKX</a>
                 <nav class="nav" role="navigation" aria-label="Navegación principal">
                     <a href="#">Inicio</a>
                     <a href="#productos">Productos</a>
@@ -87,13 +87,27 @@
 
         <footer class="footer" role="contentinfo">
             <div class="footer__inner">
-                <div>
-                    <strong>MiTienda</strong>
-                    <p>Dirección, contacto y redes</p>
+                <div class="footer__col contact">
+                    <strong>STOCKX</strong>
+                    <address>
+                        Calle Falsa 123, Ciudad, País<br>
+                        Tel: <a href="tel:+34123456789">+34 123 456 789</a><br>
+                        Email: <a href="mailto:contacto@stockx.example">contacto@stockx.example</a>
+                    </address>
                 </div>
-                <nav aria-label="Enlaces de pie de página">
-                    <a href="#">Privacidad</a> | <a href="#">Términos</a>
-                </nav>
+                <div class="footer__col billing">
+                    <h4>Facturación</h4>
+                    <p>Razón social: STOCKX S.A.<br>
+                    RFC / NIF: XAXX010101000</p>
+                    <p><a href="#">Solicitar factura</a></p>
+                </div>
+                <div class="footer__col links">
+                    <nav aria-label="Enlaces de pie de página">
+                        <a href="#">Privacidad</a><br>
+                        <a href="#">Términos</a><br>
+                        <a href="#">Soporte</a>
+                    </nav>
+                </div>
             </div>
         </footer>
     </body>
