Mejora Visual de Footer

--- a/index.html
+++ b/index.html
@@ -90,6 +90,16 @@
                 <div>
                     <strong>MiTienda</strong>
                     <p>Dirección, contacto y redes</p>
+                    <div class="footer__contact">
+                        <p>
+                            <strong>Email:</strong> 
+                            <a href="mailto:mitienda@test.com">mitienda@test.com</a>
+                        </p>
+                        <p>
+                            <strong>Teléfono:</strong> 
+                            <a href="tel:+34612345678">+34 612 345 678</a>
+                        </p>
+                    </div>
                 </div>
                 <nav aria-label="Enlaces de pie de página">
                     <a href="#">Privacidad</a> | <a href="#">Términos</a>
