Mejora visual del nav

--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
                     </div>
                 </div>
                 <nav aria-label="Enlaces de pie de página">
-                    <a href="#">Privacidad</a> | <a href="#">Términos</a>
+                    <a href="#">Privacidad</a>
+                    <span style="margin:0 0.75rem">|</span>
+                    <a href="#">Términos</a>
                 </nav>
             </div>
         </footer>
