--- a/index.html
+++ b/index.html
@@ -45,26 +45,35 @@
                             <h2 id="p2-title" class="card__title">Producto 2</h2>
                             <div class="card__price">$79.00</div>
                             <p class="card__desc">Breve descripción del producto.</p>
+                            <div style="margin-top:0.75rem;"><button class="btn btn--primary">Agregar</button></div>
                         </article>
                         <article class="card" aria-labelledby="p3-title">
                             <img src="sources/358592-800-800.webp" class="card__image" alt="Producto 3">
                             <h2 id="p3-title" class="card__title">Producto 3</h2>
                             <div class="card__price">$19.50</div>
+                            <p class="card__desc">Breve descripción del producto.</p>
+                            <div style="margin-top:0.75rem;"><button class="btn btn--primary">Agregar</button></div>
                         </article>
                         <article class="card" aria-labelledby="p4-title">
                             <img src="sources/Tenis_adidas_Grand_Court_Cloudfoam_Comfort_Blanco_GW9195_db01_standard.jpg.avif" class="card__image" alt="Producto 4">
                             <h2 id="p4-title" class="card__title">Producto 4</h2>
                             <div class="card__price">$120.00</div>
+                            <p class="card__desc">Breve descripción del producto.</p>
+                            <div style="margin-top:0.75rem;"><button class="btn btn--primary">Agregar</button></div>
                         </article>
                         <article class="card" aria-labelledby="p5-title">
                             <img src="sources/Tenis_adidas_VL_Court_3.0_Blanco_ID8797_HM1.jpg.avif" class="card__image" alt="Producto 5">
                             <h2 id="p5-title" class="card__title">Producto 5</h2>
                             <div class="card__price">$9.99</div>
+                            <p class="card__desc">Breve descripción del producto.</p>
+                            <div style="margin-top:0.75rem;"><button class="btn btn--primary">Agregar</button></div>
                         </article>
                         <article class="card" aria-labelledby="p6-title">
                             <img src="sources/Tenis_Advantage_adidas_Court_Blanco_GY6995_01_standard.jpg.avif" class="card__image" alt="Producto 6">
                             <h2 id="p6-title" class="card__title">Producto 6</h2>
                             <div class="card__price">$250.00</div>
+                            <p class="card__desc">Breve descripción del producto.</p>
+                            <div style="margin-top:0.75rem;"><button class="btn btn--primary">Agregar</button></div>
                         </article>
                     </div>
                 </section>
